05-network_policy/diff-namespace-np/firefox-ns.yaml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: firefox-ns
  labels:
    ns: firefox-ns
