05-network_policy/diff-namespace-np/nginx-ns.yaml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: nginx-ns
  labels:
    name: nginx-ns
