05-network_policy/diff-namespace-np/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-ns
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
